force-app/main/default/objects/CBK_Activity_Extension__c/CBK_Activity_Extension__c.object-meta.xml
<CustomObject>
    <label>Activity Extension</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>CRM_Tarea Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Activities Extension</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>