force-app/main/default/objects/CBK_Activity_Extension__c/fields/AV_AccionesARealizar__c.field-meta.xml
<CustomField>
    <fullName>AV_AccionesARealizar__c</fullName>
    <description>Acciones a realizar después del cierre de una experiencia de cliente</description>
    <label>Acciones a realizar</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OECP</fullName>
                <label>Ofrecer y explicar cita previa</label>
            </value>
            <value>
                <fullName>AUCN</fullName>
                <label>Acompañar uso y conocimiento NOW</label>
            </value>
            <value>
                <fullName>EPCA</fullName>
                <label>Explicar precio/comisiones aplicadas</label>
            </value>
            <value>
                <fullName>EVMS</fullName>
                <label>Explicar ventajas Modelo Store</label>
            </value>
            <value>
                <fullName>RPNR</fullName>
                <label>Revisar problema no resuelto</label>
            </value>
            <value>
                <fullName>DCSAMC</fullName>
                <label>Disculparse por la calidad de servicio y aplicar mejoras en el centro</label>
            </value>
            <value>
                <fullName>DEDS</fullName>
                <label>Detectar el error y dar solución</label>
            </value>
            <value>
                <fullName>ADRE</fullName>
                <label>Aplicar descuento, reembolso, etc.</label>
            </value>
            <value>
                <fullName>OPANC</fullName>
                <label>Ofrecer producto acorde con necesidad cliente</label>
            </value>
            <value>
                <fullName>FNDCG</fullName>
                <label>Facilitar nombre y datos contacto gestor</label>
            </value>
            <value>
                <fullName>RMSSCC</fullName>
                <label>Reportar mejora a SSCC</label>
            </value>
            <value>
                <fullName>Otras</fullName>
            </value>
            <value>
                <fullName>DCSAM</fullName>
                <label>Disculparse por la calidad de servicio y aplicar mejoras</label>
            </value>
            <value>
                <fullName>ODEPS</fullName>
                <label>Ofrecer detalle explicación de producto / servicio</label>
            </value>
            <value>
                <fullName>EMEPV</fullName>
                <label>Explicar el modelo especializado y su propuesta de valor</label>
            </value>
            <value>
                <fullName>FNDC</fullName>
                <label>Facilitar nombre y datos contacto</label>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>