force-app/main/default/objects/CBK_Activity_Extension__c/fields/AV_ActivityId__c.field-meta.xml
<CustomField>
    <fullName>AV_ActivityId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Campo para guardar la id de la tarea o evento relacionado con la CRM tarea.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Actividad relacionada</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>