force-app/main/default/objects/CBK_Activity_Extension__c/fields/AV_CanalDeLaVenta__c.field-meta.xml
<CustomField>
    <fullName>AV_CanalDeLaVenta__c</fullName>
    <label>Canal de la venta</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>000000000</fullName>
                <label>NO INFORMADO</label>
            </value>
            <value>
                <fullName>010000000</fullName>
                <label>OPERATIVA RED GENERICA</label>
            </value>
            <value>
                <fullName>010010000</fullName>
                <label>OFICINA / TERMINAL FINANCIERO</label>
            </value>
            <value>
                <fullName>010010010</fullName>
                <label>TERMINAL FINANCIERO - VENTANA COMERCIAL</label>
            </value>
            <value>
                <fullName>010010020</fullName>
                <label>TERMINAL FINANCIERO - FLASH COMERCIAL</label>
            </value>
            <value>
                <fullName>010010030</fullName>
                <label>TERMINAL FINANCIERO - FICHA SIF PANTALLA</label>
            </value>
            <value>
                <fullName>010010040</fullName>
                <label>TERMINAL FINANCIERO - FICHA SIF IMPRESA</label>
            </value>
            <value>
                <fullName>010010070</fullName>
                <label>CANAL OFICINA (CANAL COMERCIAL CON CLIENTE)</label>
            </value>
            <value>
                <fullName>010010080</fullName>
                <label>TELEMARKETING</label>
            </value>
            <value>
                <fullName>010010090</fullName>
                <label>OFICINA - SERVICIOS DE DIGITALIZACION</label>
            </value>
            <value>
                <fullName>010010100</fullName>
                <label>CANAL OFICINA - AGENTES FINANCIEROS</label>
            </value>
            <value>
                <fullName>010010110</fullName>
                <label>CANAL OFICINA - ASISTENTE COGNITIVO</label>
            </value>
            <value>
                <fullName>010020000</fullName>
                <label>SERVICIOS CENTRALES</label>
            </value>
            <value>
                <fullName>010020010</fullName>
                <label>MESA EJECUCION RETAIL (CENTRO APERTURA 5079)</label>
            </value>
            <value>
                <fullName>010020020</fullName>
                <label>CANAL BOX - MERCADOS (CENTRO APERTURA 5279)</label>
            </value>
            <value>
                <fullName>010020030</fullName>
                <label>MESA RENTA VARIABLE BANCA PRIVADA (CENTRO 9400)</label>
            </value>
            <value>
                <fullName>010020040</fullName>
                <label>SERVICIO ATENCION PERMANENTE (4223)</label>
            </value>
            <value>
                <fullName>010020050</fullName>
                <label>TELEFONIA</label>
            </value>
            <value>
                <fullName>010030000</fullName>
                <label>INTRANET</label>
            </value>
            <value>
                <fullName>010040000</fullName>
                <label>OPER OFICINA - CANAL EXTERNO RENTING - GENERICO</label>
            </value>
            <value>
                <fullName>010050000</fullName>
                <label>CANAL EXTERNO FINANCIACION AL CONSUMO - GENERICO</label>
            </value>
            <value>
                <fullName>010060000</fullName>
                <label>GENERICO</label>
            </value>
            <value>
                <fullName>010060010</fullName>
                <label>BACK OFFICE SSBB CAIXABANK</label>
            </value>
            <value>
                <fullName>010060020</fullName>
                <label>BACK OFFICE SSBB FILIALES(GDS)</label>
            </value>
            <value>
                <fullName>010060030</fullName>
                <label>CALL CENTER ASISTENCIA TARJETAS</label>
            </value>
            <value>
                <fullName>010060040</fullName>
                <label>CALL CENTER BLOQUEOS TARJETAS</label>
            </value>
            <value>
                <fullName>010060050</fullName>
                <label>CONTROL SERVICIO PRODUCCION INFORMATICA</label>
            </value>
            <value>
                <fullName>010060060</fullName>
                <label>INTERNACIONAL</label>
            </value>
            <value>
                <fullName>010060070</fullName>
                <label>FILIALES(IAR, BKB, IRE, FAC, SGP)</label>
            </value>
            <value>
                <fullName>010060080</fullName>
                <label>CALL CENTER HELP DESK LOE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>