force-app/main/default/objects/CBK_Activity_Extension__c/fields/AV_CommentLastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>AV_CommentLastModifiedDate__c</fullName>
    <description>Fecha de última modificación del comentario del evento/tarea.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha de modificación del comentario</label>
    <type>DateTime</type>
</CustomField>