force-app/main/default/objects/CBK_Activity_Extension__c/fields/AV_FechaDeLaVenta__c.field-meta.xml
<CustomField>
    <fullName>AV_FechaDeLaVenta__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha de la venta</label>
    <type>Date</type>
</CustomField>