force-app/main/default/objects/CBK_Activity_Extension__c/fields/AV_MotivoCierreExperienciaCliente__c.field-meta.xml
<CustomField>
    <fullName>AV_MotivoCierreExperienciaCliente__c</fullName>
    <description>Motivo de cierre de una experiencia de cliente</description>
    <label>Motivo cierre experiencia cliente</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MO</fullName>
                <label>Modelo de oficina</label>
            </value>
            <value>
                <fullName>FC</fullName>
                <label>Facilidad de contacto</label>
            </value>
            <value>
                <fullName>CO</fullName>
                <label>Cierre oficina</label>
            </value>
            <value>
                <fullName>CG</fullName>
                <label>Cambio de gestor</label>
            </value>
            <value>
                <fullName>AT</fullName>
                <label>Atención y trato</label>
            </value>
            <value>
                <fullName>COG</fullName>
                <label>Competencia del Gestor</label>
            </value>
            <value>
                <fullName>NOW</fullName>
                <label>NOW (Web o App)</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Cajeros</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>Producto</label>
            </value>
            <value>
                <fullName>PC</fullName>
                <label>Precio y/o comisiones</label>
            </value>
            <value>
                <fullName>CTE</fullName>
                <label>Colas y tiempos de espera</label>
            </value>
            <value>
                <fullName>PNR</fullName>
                <label>Problema no resuelto</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>Morosidad</label>
            </value>
            <value>
                <fullName>GP</fullName>
                <label>Gestión Postventa</label>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
            <value>
                <fullName>PA</fullName>
                <label>Poca agilidad</label>
            </value>
            <value>
                <fullName>CE</fullName>
                <label>Claridad explicaciones</label>
            </value>
            <value>
                <fullName>DC</fullName>
                <label>Dificultad de contacto</label>
            </value>
            <value>
                <fullName>NoG</fullName>
                <label>No reconoce tener gestor</label>
            </value>
            <value>
                <fullName>NoR</fullName>
                <label>No concesión de riesgos</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>