force-app/main/default/objects/CBK_Activity_Extension__c/fields/AV_Priority__c.field-meta.xml
<CustomField>
    <fullName>AV_Priority__c</fullName>
    <label>Prioridad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <default>true</default>
                <label>Alta</label>
            </value>
            <value>
                <fullName>Y</fullName>
                <label>Muy Alta</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>Media</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>