force-app/main/default/objects/CBK_Activity_Extension__c/fields/AV_Reasignar_cartera_Owner__c.field-meta.xml
<CustomField>
    <fullName>AV_Reasignar_cartera_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reasignar cartera Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CRM_Tareas</relationshipName>
    <type>Lookup</type>
</CustomField>