force-app/main/default/objects/CBK_Activity_Extension__c/fields/AV_ReasignarCartera_Id_Cliente__c.field-meta.xml
<CustomField>
    <fullName>AV_ReasignarCartera_Id_Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reasignar cartera ID cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>CRM_Tareas</relationshipName>
    <type>Lookup</type>
</CustomField>