force-app/main/default/objects/CBK_Activity_Extension__c/fields/AV_ReasignarCartera_Id_Task__c.field-meta.xml
<CustomField>
    <fullName>AV_ReasignarCartera_Id_Task__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reasignar cartera ID task</label>
    <length>20</length>
    <type>Text</type>
</CustomField>