force-app/main/default/objects/CBK_Activity_Extension__c/fields/AV_ReasignarCartera_JSONAPI__c.field-meta.xml
<CustomField>
    <fullName>AV_ReasignarCartera_JSONAPI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>JSON API</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>