force-app/main/default/objects/CBK_Activity_Extension__c/fields/AV_Status__c.field-meta.xml
<CustomField>
    <fullName>AV_Status__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendiente</fullName>
            </value>
            <value>
                <fullName>Gestionada Positiva</fullName>
                <label>Cerrado</label>
            </value>
            <value>
                <fullName>Cerrado</fullName>
                <isActive>false</isActive>
                <label>Cerrado</label>
            </value>
            <value>
                <fullName>Desactivada</fullName>
                <isActive>false</isActive>
                <label>Desactivada</label>
            </value>
            <value>
                <fullName>Gestionada negativa</fullName>
                <isActive>false</isActive>
                <label>Gestionada negativa</label>
            </value>
            <value>
                <fullName>Gestionado no localizado</fullName>
                <isActive>false</isActive>
                <label>Gestionado no localizado</label>
            </value>
            <value>
                <fullName>No gestionada</fullName>
                <isActive>false</isActive>
                <label>No gestionada</label>
            </value>
            <value>
                <fullName>Pendiente no localizado</fullName>
                <isActive>false</isActive>
                <label>Pendiente no localizado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>