force-app/main/default/objects/CBK_Activity_Extension__c/fields/AV_StatusCodeAPI__c.field-meta.xml
<CustomField>
    <fullName>AV_StatusCodeAPI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Status Code API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>