force-app/main/default/objects/CBK_Activity_Extension__c/fields/AV_ValoracionGestion__c.field-meta.xml
<CustomField>
    <fullName>AV_ValoracionGestion__c</fullName>
    <label>Valoración de la gestión</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P</fullName>
                <label>Ha empeorado</label>
            </value>
            <value>
                <fullName>I</fullName>
                <label>Indiferente</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>Ha mejorado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>