force-app/main/default/objects/CBK_Activity_Extension__c/fields/CBK_Eliminable__c.field-meta.xml
<CustomField>
    <fullName>CBK_Eliminable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CBK_Eliminable</label>
    <type>Checkbox</type>
</CustomField>