force-app/main/default/objects/CBK_Activity_Extension__c/fields/CC_Reapertura_Valida_Task__c.field-meta.xml
<CustomField>
    <fullName>CC_Reapertura_Valida_Task__c</fullName>
    <label>Reapertura valida</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>