force-app/main/default/objects/CBK_Activity_Extension__c/fields/CC_Tipo_de_cita__c.field-meta.xml
<CustomField>
    <fullName>CC_Tipo_de_cita__c</fullName>
    <description>Campo utilizado para la operativa Cita gestor y especificar si es por telefono o en persona.</description>
    <label>Tipo de cita</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cita telefónica</fullName>
            </value>
            <value>
                <fullName>Cita presencial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>