force-app/main/default/objects/CBK_Activity_Extension__c/fields/CIBE_ClienteNuevo__c.field-meta.xml
<CustomField>
    <fullName>CIBE_ClienteNuevo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Se trata de un nuevo Cliente?</label>
    <type>Checkbox</type>
</CustomField>