force-app/main/default/objects/CBK_Activity_Extension__c/fields/CIBE_ComentarioCita__c.field-meta.xml
<CustomField>
    <fullName>CIBE_ComentarioCita__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Comentario de la Cita</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>