force-app/main/default/objects/CBK_Activity_Extension__c/fields/CIBE_ConclusionesCita__c.field-meta.xml
<CustomField>
    <fullName>CIBE_ConclusionesCita__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Conclusiones de la Cita</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>