force-app/main/default/objects/CBK_Activity_Extension__c/fields/CIBE_ConclusionesGestor__c.field-meta.xml
<CustomField>
    <fullName>CIBE_ConclusionesGestor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Conclusiones gestor</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>