force-app/main/default/objects/CBK_Activity_Extension__c/fields/CIBE_Country__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Country__c</fullName>
    <label>País</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alemania</fullName>
            </value>
            <value>
                <fullName>Afganistán</fullName>
            </value>
            <value>
                <fullName>Andorra</fullName>
            </value>
            <value>
                <fullName>Angola</fullName>
            </value>
            <value>
                <fullName>Arabia Saudí</fullName>
            </value>
            <value>
                <fullName>Argelia</fullName>
            </value>
            <value>
                <fullName>Argentina</fullName>
            </value>
            <value>
                <fullName>Armenia</fullName>
            </value>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>Austria</fullName>
            </value>
            <value>
                <fullName>Azerbaiyan</fullName>
            </value>
            <value>
                <fullName>Bahamas</fullName>
            </value>
            <value>
                <fullName>Baréin</fullName>
            </value>
            <value>
                <fullName>Bélgica</fullName>
            </value>
            <value>
                <fullName>Benín</fullName>
            </value>
            <value>
                <fullName>Bermudas</fullName>
            </value>
            <value>
                <fullName>Bielorusia</fullName>
            </value>
            <value>
                <fullName>Bolivia</fullName>
            </value>
            <value>
                <fullName>Botswana</fullName>
            </value>
            <value>
                <fullName>Brasil</fullName>
            </value>
            <value>
                <fullName>Brunéi</fullName>
            </value>
            <value>
                <fullName>Bulgaria</fullName>
            </value>
            <value>
                <fullName>Burundi</fullName>
            </value>
            <value>
                <fullName>Camerún</fullName>
            </value>
            <value>
                <fullName>Canadá</fullName>
            </value>
            <value>
                <fullName>Chile</fullName>
            </value>
            <value>
                <fullName>Chipre</fullName>
            </value>
            <value>
                <fullName>Colombia</fullName>
            </value>
            <value>
                <fullName>Corea Del Sur</fullName>
            </value>
            <value>
                <fullName>Costa de marfil</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>