force-app/main/default/objects/CBK_Activity_Extension__c/fields/CIBE_InformacionComplementariaGestor__c.field-meta.xml
<CustomField>
    <fullName>CIBE_InformacionComplementariaGestor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Información Complementaria Gestor</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>