force-app/main/default/objects/CBK_Activity_Extension__c/fields/CIBE_RelacionCliente__c.field-meta.xml
<CustomField>
    <fullName>CIBE_RelacionCliente__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Relación con el Cliente</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>