force-app/main/default/objects/CBK_Activity_Extension__c/recordTypes/AV_Task.recordType-meta.xml
<RecordType>
    <fullName>AV_Task</fullName>
    <active>true</active>
    <label>Task</label>
</RecordType>