force-app/main/default/objects/CBK_Activity_Extension__c/recordTypes/CC_Task.recordType-meta.xml
<RecordType>
    <fullName>CC_Task</fullName>
    <active>true</active>
    <description>Activity extensions de CC</description>
    <label>CC Task</label>
</RecordType>